<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.auth.OtpFragment"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:background="@color/primary1"
            android:orientation="horizontal"
            android:padding="10dp">

        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/spacing_xlarge"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/primary1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verification"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textStyle="bold" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:gravity="center"
                android:text="@string/otp_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/otpProgressbar"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:indeterminate="true"
        android:layout_below="@+id/upperLinearLayout"
        android:layout_marginTop="@dimen/_5sdp"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:text="+88"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/grey_60"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="0dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:id="@+id/phoneNumberInVerificationPage"
                android:text="9767 0587 7834"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/grey_60"
                android:textStyle="bold">

                <requestFocus />

            </com.google.android.material.textfield.TextInputEditText>


            <ImageButton
                android:layout_width="@dimen/spacing_xmlarge"
                android:layout_height="@dimen/spacing_xmlarge"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_check_circle"
                app:tint="@color/green_400" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:gravity="center"
            android:text="@string/enter_otp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_large" />

        <in.aabhasjindal.otptextview.OtpTextView
            android:id="@+id/otp_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_60"
            app:height="40dp"
            app:width="40dp"
            app:bar_height="2dp"
            app:length="6"
            app:otp_text_size="16dp"
            app:otp_box_background="@drawable/border_black"
            app:otp_box_background_active="@drawable/red_curved_border"/>

        <TextView
            android:id="@+id/tv_countdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:gravity="center"
            android:text="@string/otp_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_60" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/verify_otp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/purple_curved_shape"
            android:text="@string/confirm"
            android:textColor="@android:color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/resendOtp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/resend_otp"
            android:textColor="@color/grey_40" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_middle" />

    </LinearLayout>

</LinearLayout>
