<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/roads"
    android:orientation="vertical"
    android:weightSum="6"
    tools:context=".ui.auth.LoginFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2.2"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">
        <ImageView
            android:scaleType="fitCenter"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:src="@drawable/app_png_icon"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/welcome_back"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/welcome_app"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.8"
        android:background="@drawable/upperonly2"
        android:orientation="vertical"
        android:padding="16dp">

        <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
            android:id="@+id/enterPhoneLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:neomorph_background_color="@color/neomorph_background_color"
            app:neomorph_corner_radius="5dp"
            app:neomorph_elevation="5dp"
            app:neomorph_highlight_color="@color/highlight_color"
            app:neomorph_shadow_color="@color/shadow_color"
            app:neomorph_shadow_type="inner"
            app:neomorph_view_type="rectangular">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="90">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:fontFamily="sans-serif-light"
                    android:text="+88"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:layout_marginRight="5dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:fontFamily="sans-serif-light"
                    android:textColorHint="@color/overlay_dark_40"
                    android:textColor="@color/overlay_dark_60"
                    android:id="@+id/enterUserPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:background="@android:color/transparent"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/enter_phone"
                    android:textSize="16sp"
                    android:inputType="numberDecimal"
                    android:gravity="center|left"
                    android:maxLength="11"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:paddingLeft="@dimen/_2sdp"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:backgroundTint="@color/primary1"
                    android:src="@drawable/ic_baseline_arrow_forward_24"
                    android:gravity="right"
                    android:id="@+id/button_confirm"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-light"
                    android:text="Go" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

    </RelativeLayout>

</LinearLayout>
